--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,12 +14,20 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="at.blooo.MainActivity"
+            android:name="at.blooo.MainMenuActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="at.blooo.MainActivity" >
+            <intent-filter>
+                <action android:name="at.blooo.MainActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
